k8s/manifests/base/rcoder/rcoder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rcoder
  namespace: nuwax-rcoder
spec:
  type: NodePort
  selector:
    app: rcoder
  ports:
  - port: 8087
    targetPort: 8087
    nodePort: 30080
